Add GET flow/stats endpoint
